# hello-world.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: hwcppstddef.h  main.cpp
